@@ -1,8 +1,14 @@
 $Id$
 
 Version 1.2.5 (?? Feb 2012)
-  - Patch 3488543: Fix XSS vulnerabilities to location variable to event edit
-    page.
+ - Patch 3488543: Fix XSS vulnerabilities to location variable to event edit
+   page.
+ - Patch 3414999: Security fix the following notice:
+   http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2011-3814
+   "WebCalendar 1.2.3 allows remote attackers to obtain sensitive information
+   via a direct request to a .php file, which reveals the installation path
+   in an error message, as demonstrated by ws/user_mod.php and certain other
+   files."
 
 Version 1.2.4 (08 Aug 2011)
  - Don't display program version as HTML comment unless user is an admin.
